--- a/DBADashGUI/Properties/Resources.resx
+++ b/DBADashGUI/Properties/Resources.resx
@@ -307,4 +307,7 @@
   <data name="DatabaseSettings_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DatabaseSettings_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="VBReport_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VBReport_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
