--- a/DBADashGUI/Properties/Resources.resx
+++ b/DBADashGUI/Properties/Resources.resx
@@ -316,4 +316,10 @@
   <data name="NewWindow_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NewWindow_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SaveTable_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SaveTable_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DataTable_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DataTable_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
