--- a/DBADashGUI/HA/LogShippingControl.resx
+++ b/DBADashGUI/HA/LogShippingControl.resx
@@ -132,16 +132,28 @@
   <metadata name="BackupStartDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="TimeSinceLast.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="TotalTimeBehind.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="LatencyOfLast.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="TotalTimeBehind.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="TimeSinceLast.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TotalTimeBehindDuration.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="LatencyOfLastDuration.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TimeSinceLastDuration.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="SnapshotAge.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="SnapshotAgeDuration.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="LastFile.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -163,15 +175,15 @@
   <data name="statusFilterToolStrip1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAHbSURBVDhPjZK9SwJxHMbvT6m9SYKWs8EabogKc1CijLpB
-        HCKkLE6pqJBeDSsqzV6Iiny7osFBe6FwKiFoMGgqSIgg3Bz95vPr7tK7hr7wLMc9n+/zfO84/VyFT6NP
-        a7ulj+UQQV+5INPzdbh0lz2JKq8ZJ70r84VQpPw0JlG8s4eCphamdXcz01mgmwryOL3cbJezWZlXbD8D
-        89vKeuXc5qAwb6Gca5heZxaoOB+kz9sler8M0P2Bm/a8rZRZ66XiXahSB8HmtKOf9iyCZlQFgCqAjqR2
-        BkESZmadq7GxWW/WA1QIkqAOuwkOhs6IDUOmb0jrX3sDKLcjMgjq4CY4LIdL48Xa7bEOqwEgB7rqUuAZ
-        vo4GUM0QYKikAhAZJhUAaQCfvEWNNjNNxDfq5IrMseeNVg+5whmaiN3XCc99yfwvwHO8aoCoAL3Zc5T7
-        BUipw5J5xEH2xdF/A+zzMTIPB0lK5m84fyoRFbenqckpGFL8BcD2pv5JEjfT5E/mB9i/4JP3y21eJ5nE
-        TmMVndk0OEuCFEH8R2bGTMkXvC8VqQh+kSVBHQ2kGBEbm2GWEg+lqbPHBsX+MwxSTYI6uAmLr1SA0Bmx
-        sdlgrh3cBIfF12GqXhrCwbTO2nDcNxpvR7NQRXnOAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAHVSURBVDhPjZLLSwJRGMX9U3LvSoI22sJauAiLcqFEFjUL
+        aREhWTFKRYXYyzCj0uxBVORrihYutAeJKxMEFwWtChIiCHcu/eJcmts406ILZ3O55/ed883odKpzG72I
+        V7cO6h/rYYK+iiGm57tovZA/j6vf85M9kExP4Vij6hUpaRugkLGDKTLeznQZ6KMnaYZe7vca+bxk0pjf
+        NiLNK7uToiYLFd0T9Lq4QrVgiD4f1uj9JkCl43E6nO6k3NYg1QrhZgsEk7NOFx1arNwoCwBZAJ2K3QyC
+        JMzMOntFNlltVgNkCJKgDtsJFobOiA1DbmiM91fuACruCwyCOtgJFqvDpvFQOT3R068BSIHelhS4w9fh
+        AGVswFBJBiAyTMoqHOCTdklvN9NscrtF7tgyu9f3e8gdzdFsotQi3PvS5V+A52xTA5EBarPntPgLEDMn
+        dfOkkxyrU/8GOIIJMk+ESEyX73X+TCou7C2QYdiqSfEXANMNrjkSdrLkT5dH2L/gk44aXdPDZBRsGoja
+        bBxdIqsYQ/wK/xPnpWuTLxNrWv0CS4I6HPRjRGxMhllMPdbnLyttHMAh0lEDdbATFv+nAoTOiI3JGrPy
+        YCdYLL4OU7rMhIXxzorzDRpvR7NCmeS8AAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
